universal code + seperate css file

--- a/templates/board.html
+++ b/templates/board.html
@@ -20,65 +20,7 @@
 
 
 
- <style>
-  <body>
-
-
-*{box-sizing: border-box;}
-
-
-.right{
-    float:right;
-}
-.left{
-    float:left;
-}
-
-div.transbox {
-  background-color:#F1E0D7 ;
- 
-  overflow-wrap: break-word;
-
-  max-width: 80%;
-  min-width: 50%;
-     /* For IE8 and earlier */
-     
-
-    display: inline;
-    display: inline-block;
-}
-
-div.transboxx {
-  background-color: #FFFFF0;
-  
-  overflow-wrap: break-word;
-
-
-  /* For IE8 and earlier */
-}
-
-div.one{
-background-color: #FFFFF0;
-  width: 100%;
-  overflow-wrap: break-word;
-  display: inline;
-    display: inline-block;
-
-}
-
-img {
-    width:150px;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    height:auto;
-    }
-video {
-	margin-right: 15px;
-  margin-bottom: 15px;
-}
-
- </head>
-</style>
+ <link rel="stylesheet" type="text/css" href="/_scripts/futuba.css">
 <script type='text/javascript'>
     function zoomzoom(id) {
 
