--- a/templates/thread.html
+++ b/templates/thread.html
@@ -22,67 +22,11 @@
 
 <a href = {{url_for("board_home" , board=board)}}> <font> <center> Go back to {{board}} </center> </font> </a>
 </br>
- <style>
-  <body>
+
+ <link rel="stylesheet" type="text/css" href="/_scripts/futuba.css">
 
 
-*{box-sizing: border-box;}
 
-
-.right{
-    float:right;
-}
-.left{
-    float:left;
-}
-
-div.transbox {
-  background-color:#F1E0D7 ;
-
-  overflow-wrap: break-word;
-
-  max-width: 80%;
-  min-width: 50%;
-     /* For IE8 and earlier */
-
-
-    display: inline;
-    display: inline-block;
-}
-
-div.transboxx {
-  background-color: #FFFFF0;
-
-  overflow-wrap: break-word;
-
-
-  /* For IE8 and earlier */
-}
-
-div.one{
-background-color: #FFFFF0;
-  width: 100%;
-  overflow-wrap: break-word;
-  display: inline;
-    display: inline-block;
-
-}
-
-img {
-    width:150px;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    height:auto;
-    }
-video {
-  margin-right: 15px;
-  margin-bottom: 15px;
-}
-
-
- </head>
-
-</style>
 
 <script type='text/javascript'>
     function zoomzoom(id) {
