--- a/templates/board.html
+++ b/templates/board.html
@@ -1,5 +1,6 @@
 <title>/{{board}}/ - RikChan</title>
-<center><img style="width:50%;" src=/_banner/{{random()}}></center><hr>
+<center>{{board_list() | safe}}</center><hr>
+<center></br><img style="width:50%;" src=/_banner/{{random()}}></center><hr>
 <form action = "/{{board}}/" method = "post" enctype=multipart/form-data><body style="background-color:#FFFFF0" text=#800000>
          <body>
           <center>
@@ -61,7 +62,7 @@
 
           <span class="left"><input type="checkbox" name="{{t.id}}" value="THREAD"></span>
 
-          {{t.name}} {{t.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.{{t.id}} [<a href="/{{board}}/{{t.id}}">Reply</a>]<font size="2">
+          {{t.name}} {{t.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a href="/{{board}}/{{t.id}}?r={{t.id}}">{{t.id}}</a> [<a href="/{{board}}/{{t.id}}">Reply</a>]<font size="2">
         {%for a in refer.query.filter_by(board=board).filter_by(replied_to=t.id).all()%}
           &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
         {%endfor%}
@@ -94,7 +95,7 @@
 
           <span class="left"><input type="checkbox" name="{{p.id}}" value="POST"></span>
 
-          <span class="left">{{p.name}} {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.{{p.id}}</span> <font size="2">
+          <span class="left">{{p.name}} {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a href="/{{board}}/{{t.id}}?r={{p.id}}">{{p.id}}</a></span> <font size="2">
           {%for a in refer.query.filter_by(board=board).filter_by(replied_to=p.id).all()%}
           &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
 
