--- a/templates/board.html
+++ b/templates/board.html
@@ -6,6 +6,8 @@
           <center>
         <h1>/{{board}}/</h1>
         <p1>{{desc}}</p1>
+         <p><input type = "text" name = "subject" placeholder="subject" size=50 /></p>
+
          <p><input type = "text" name = "name" placeholder="name" size=50 value="{{anon}}"/></p>
          <textarea id="body" rows="4" cols="50" placeholder="body" name="body"></textarea>
          <p><input type = "password" name = "password" placeholder="password" size=50 value="{{gen(5)}}"/></p>
@@ -62,11 +64,20 @@
 
           <span class="left"><input type="checkbox" name="{{t.id}}" value="THREAD"></span>
 
-          {{t.name}} {{t.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a href="/{{board}}/{{t.id}}?r={{t.id}}">{{t.id}}</a> [<a href="/{{board}}/{{t.id}}">Reply</a>]<font size="2">
+    {%if "#" not in t.name%}
+          <b><font color="red">{{t.subject}}</font></b> <b><font color="green">{{t.name}}</font></b> {{t.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a href="/{{board}}/{{t.id}}?r={{t.id}}">{{t.id}}</a> [<a href="/{{board}}/{{t.id}}">Reply</a>]<font size="2">
         {%for a in refer.query.filter_by(board=board).filter_by(replied_to=t.id).all()%}
           &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
         {%endfor%}
       </font>
+    {%else%}
+          <b><font color="red">{{t.subject}}</font></b> <b><font color="purple">{{t.name}}</font></b> {{t.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a href="/{{board}}/{{t.id}}?r={{t.id}}">{{t.id}}</a> [<a href="/{{board}}/{{t.id}}">Reply</a>]<font size="2">
+        {%for a in refer.query.filter_by(board=board).filter_by(replied_to=t.id).all()%}
+          &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
+        {%endfor%}
+      </font>
+    {%endif%}
+
 
         </br>
              <p>{{green(t.body , board) | safe}}</p>
@@ -92,16 +103,29 @@
    
   <div class="transbox">
 
-
+    {% if "#" not in p.name %}
           <span class="left"><input type="checkbox" name="{{p.id}}" value="POST"></span>
 
-          <span class="left">{{p.name}} {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a href="/{{board}}/{{t.id}}?r={{p.id}}">{{p.id}}</a></span> <font size="2">
+          <span class="left"><b><font color="green">{{p.name}}</font></b> {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a href="/{{board}}/{{t.id}}?r={{p.id}}">{{p.id}}</a></span> <font size="2">
           {%for a in refer.query.filter_by(board=board).filter_by(replied_to=p.id).all()%}
           &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
 
         {%endfor%}
 
       </font>
+    {%else%}
+          <span class="left"><input type="checkbox" name="{{p.id}}" value="POST"></span>
+
+          <span class="left"><b><font color="purple">{{p.name}}</font></b> {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a href="/{{board}}/{{t.id}}?r={{p.id}}">{{p.id}}</a></span> <font size="2">
+          {%for a in refer.query.filter_by(board=board).filter_by(replied_to=p.id).all()%}
+          &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
+
+        {%endfor%}
+
+      </font>
+
+
+    {%endif%}
 
         </br>
         <p>
