updated templates with new css name

--- a/templates/board.html
+++ b/templates/board.html
@@ -23,7 +23,7 @@
 
 
 
- <link rel="stylesheet" type="text/css" href="/_scripts/futuba.css">
+ <link rel="stylesheet" type="text/css" href="/_scripts/futaba.css">
 <script type='text/javascript'>
     function zoomzoom(id) {
 
