--- a/templates/thread.html
+++ b/templates/thread.html
@@ -24,7 +24,7 @@
 <a href = {{url_for("board_home" , board=board)}}> <font> <center> Go back to {{board}} </center> </font> </a>
 </br>
 
- <link rel="stylesheet" type="text/css" href="/_scripts/futuba.css">
+ <link rel="stylesheet" type="text/css" href="/_scripts/futaba.css">
 
 
 
