--- a/templates/board.html
+++ b/templates/board.html
@@ -1,7 +1,61 @@
+
+<script type="text/javascript">
+function load_css(css_file){
+  var fileref=document.createElement("link")
+  fileref.setAttribute("rel", "stylesheet")
+  fileref.setAttribute("type", "text/css")
+  fileref.setAttribute("href", css_file)
+  document.getElementsByTagName("head")[0].appendChild(fileref)
+
+}
+function load(){
+  var e = document.getElementById("theme");
+  var theme = e.options[e.selectedIndex].value;
+  load_css(theme);
+  localStorage.setItem("theme", theme);
+  //alert(localStorage.getItem("{{board}}"))
+}
+
+function get_theme(){
+  if(localStorage.getItem("theme")){
+    return localStorage.getItem("theme");
+  }
+  else{
+    return "/_scripts/{{theme}}"
+  }
+
+}
+//load_css("/_scripts/test3.css")
+load_css(get_theme());
+</script>
+<label for="theme">Theme: </label>
+<select id="theme" onchange="load()">
+  {%for i in themes()%}
+  <option value="/_scripts/{{i}}">{{i[0:len(i)-4]}}</option>
+  {%endfor%}
+  
+
+</select>
+<script type="text/javascript">
+  function set(s, v) {
+    for ( var i = 0; i < s.options.length; i++ ) {    
+        if ( s.options[i].value == v ) {
+            s.options[i].selected = true;
+            return;
+        }
+    }
+}
+
+set(document.getElementById('theme'),get_theme());
+</script>
+
+
+
+
 <title>/{{board}}/ - RikChan</title>
 <center>{{board_list() | safe}}</center><hr>
 <center></br><img style="width:50%;" src=/_banner/{{random()}}></center><hr>
-<form action = "/{{board}}/" method = "post" enctype=multipart/form-data><body style="background-color:#FFFFF0" text=#800000>
+<form action = "/{{board}}/" method = "post" enctype=multipart/form-data><body>
          <body>
           <center>
         <h1>/{{board}}/</h1>
@@ -23,7 +77,6 @@
 
 
 
- <link rel="stylesheet" type="text/css" href="/_scripts/futaba.css">
 <script type='text/javascript'>
     function zoomzoom(id) {
 
