--- a/templates/thread.html
+++ b/templates/thread.html
@@ -124,7 +124,7 @@ set(document.getElementById('theme'),get_theme());
 
         <span class="left"><input type="checkbox" name="{{thread.id}}" value="THREAD"></span>
 
-          <b><font color="red">{{thread.subject}}</font></b> <b><font color="green">{{thread.name}}</font></b> {{thread.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a onclick="addText(event)" href="javascript:;">{{thread.id}}</a><font size="2">
+          <b><font color="red">{{thread.subject}}</font></b> <b><font color="green">{{thread.name}}</font></b> {{thread.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a onclick="addText(event)" href="javascript:;">{{thread.id}}</a>▷<font size="2">
           {%for a in refer.query.filter_by(board=board).filter_by(replied_to=thread.id).all()%}
           &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
         {%endfor%}
@@ -132,7 +132,7 @@ set(document.getElementById('theme'),get_theme());
       {%else%}
         <span class="left"><input type="checkbox" name="{{thread.id}}" value="THREAD"></span>
 
-          <b><font color="red">{{thread.subject}}</font></b> <b><font color="purple">{{thread.name}}</font></b> {{thread.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a onclick="addText(event)" href="javascript:;">{{thread.id}}</a><font size="2">
+          <b><font color="red">{{thread.subject}}</font></b> <b><font color="purple">{{thread.name}}</font></b> {{thread.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a onclick="addText(event)" href="javascript:;">{{thread.id}}</a>▷<font size="2">
           {%for a in refer.query.filter_by(board=board).filter_by(replied_to=thread.id).all()%}
           &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
         {%endfor%}
@@ -159,7 +159,7 @@ set(document.getElementById('theme'),get_theme());
 
           <span class="left"><input type="checkbox" name="{{p.id}}" value="POST"></span>
 
-          <span class="left"><b><font color="green">{{p.name}}</font></b> {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a onclick="addText(event)" href="javascript:;">{{p.id}}</a></span> <font size="2">
+         <b><font color="green">{{p.name}}</font></b> {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a onclick="addText(event)" href="javascript:;">{{p.id}}</a>▷<font size="2">
           {%for a in refer.query.filter_by(board=board).filter_by(replied_to=p.id).all()%}
           &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
 
@@ -169,7 +169,7 @@ set(document.getElementById('theme'),get_theme());
       {%else%}
           <span class="left"><input type="checkbox" name="{{p.id}}" value="POST"></span>
 
-          <span class="left"><b><font color="purple">{{p.name}}</font></b> {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a onclick="addText(event)" href="javascript:;">{{p.id}}</a></span> <font size="2">
+          <b><font color="purple">{{p.name}}</font></b> {{p.timestamp.strftime("%m/%d/%Y, %H:%M:%S")}} No.<a onclick="addText(event)" href="javascript:;">{{p.id}}</a>▷<font size="2">
           {%for a in refer.query.filter_by(board=board).filter_by(replied_to=p.id).all()%}
           &nbsp;<a href="{{url_maker(a.own_id , board)}}">>>{{a.own_id}}</a>
 
