--- a/templates/board.html
+++ b/templates/board.html
@@ -1,4 +1,5 @@
 
+<link rel="stylesheet" type="text/css" href="/_scripts/{{theme}}"></link>
 <script type="text/javascript">
 function load_css(css_file){
   var fileref=document.createElement("link")
