fixed mainpage and other issues

--- a/templates/board.html
+++ b/templates/board.html
@@ -68,7 +68,7 @@ set(document.getElementById('theme'),get_theme());
          <p><input type = "password" name = "password" placeholder="password" size=50 value="{{gen(5)}}"/></p>
          <input type="file" name="file">
 
-         <p1><button class="button" value="upload"><b>SUMBIT</b></p1></button>
+         <p1><button class="button" value="upload"><b>Create Thread</b></p1></button>
       </form>
     </br></br>
       <font size="2">jpeg , jpg , gif , png and webm below the size of <b>4mb</b> is allowed. Read <a href="/rules">Rules</a> before posting </font>
