--- a/templates/thread.html
+++ b/templates/thread.html
@@ -64,7 +64,7 @@ set(document.getElementById('theme'),get_theme());
 
          <p><input type = "password" name = "password" placeholder="password" size=50 value="{{gen(5)}}"/></p>
             <input type="file" name="file">
-         <p1><button class="button"><b>SUMBIT</b></p1></button>
+         <p1><button class="button"><b>Post</b></p1></button>
       </form>
       </center>
       </br>
