--- a/templates/rules.html
+++ b/templates/rules.html
@@ -1,3 +1,4 @@
+<link rel="icon" href="/favicon.ico/" type="image/x-icon" />
 <center>
 <h1><font size=7>RULES</h1> </font><body style="background-color:#FFFFF0">
 
