--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,5 @@
 <head>
+<link rel="icon" href="/favicon.ico/" type="image/x-icon" />
 <title>RikChan</title>
 </head>
 <link rel="stylesheet" type="text/css" href="/_scripts/futaba.css"></link>
